Solved crossway icon not showing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,6 +57,10 @@ form {
   }
 }
 
+.it-header-slim-wrapper .it-header-slim-wrapper-content a.it-opener {
+  display: none !important;
+}
+
 
 * {
   font-family: "Fira Sans", sans-serif;
